fix overlapping sections

--- a/src/style/modules/_hosting.scss
+++ b/src/style/modules/_hosting.scss
@@ -65,7 +65,7 @@
 
   .section.building {
     background: #F3F3F3;
-    height: 382px;
+    height: auto;
     padding: 70px 0;
 
     .column {
